--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -10,6 +10,6 @@ layout: page
             </article>
         {% endfor %}
     {% else %}
-        <p>Bu kategoride yazı bulunmuyor.</p>
+        <p>There is not any entry in this category.</p>
     {% endif %}
 </div>
