--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,20 @@
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="ROBOTS" content="ALL" />
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="keywords" content="c#, .net, api, test, software, develop, app, code, program, visual studio">
   <meta property="fb:admins" content="{{ site.author.fbadmin }}" />
+  <!-- evil icon -->
 
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+  <link rel="stylesheet" href="{{"/assets/evil-icons.min.css" | prepend:site.baseurl }}">
+  <script src="{{"/assets/evil-icons.min.js" | prepend:site.baseurl }}"></script>
 
+  
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
       <link rel="stylesheet" href="{{ css }}" />
