--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,8 +39,8 @@
             </li>
           {% endfor %}
           <li>&nbsp;</li>
-          {% if page.en %}
-            {% assign permalink = page.en %}
+          {% if page.tr %}
+            {% assign permalink = page.tr %}
           {% else %}
             {% assign permalink = "" %}
           {% endif %}
