--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,9 +1,9 @@
 <section class="author">
   <div class="authorimage box" style="background: url({{site.baseurl}}/img/authors/olcaybayram.jpg)"></div>
   <div class="authorinfo box">
-    <p>Yazar: Olcay Bayram</p>
+    <p>Author: Olcay Bayram</p>
     <p class="bio">
-      Çeşitli teknoloji firmalarında çalışmış, yurtiçi ve yurtdışı farklı sektörlerden tecrübe edinmiş, derdini iki yabancı dilde anlatabilen bir yazılım uzmanı.
+      A software enthusiast; currently a .NET Developer of an e-commerce Scrum team. Apart from the BSc, he holds a masters in information technologies.
     </p>
   </div>
 </section>
