Projects added to navigation menu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,13 +6,13 @@
 		  The content of 
 		  {% if site.url-pretty %}
         <a href="{{ site.url }}">{{ site.url-pretty }}</a>
-      {% endif %} written by <a href="{{ site.author.website }}">{{ site.author.name }}</a> on year {% if page.date %}
+      {% endif %} is written by <a href="{{ site.author.website }}">{{ site.author.name }}</a> on year {% if page.date %}
         {{ page.date | date: '%Y' }}
       {% else %}
         {{ site.time | date: '%Y' }}
       {% endif %}
 		  <br/>
-      Generated with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/wild-flame/jekyll-simple">Simple</a> theme and hosted on <a href="https://github.com/otomatikmuhendis/aclockworkengineer">GitHub</a>.
+      Generated with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/wild-flame/jekyll-simple">simple</a> theme and hosted on <a href="https://github.com/otomatikmuhendis/aclockworkengineer">GitHub</a>.
       </section>
     </div>
 
