--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
           {% endif %}
           <li><a href="http://www.otomatikmuhendis.com{{ permalink }}" title="Türkçe">Türkçe</a></li>
         </ul>
-        {% include series.html %}
+        {% include projects.html %}
       </nav>
     </div>
 
