--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,10 @@
             <a href="{{ linkurl }}">{{ link[0] }}</a>
             </li>
           {% endfor %}
-          <li>&nbsp;</li>
+        </ul>
+        <ul class="page-link">
+          <li><strong>Languages</strong></li>
+          <li>English</li>
           {% if page.tr %}
             {% assign permalink = page.tr %}
           {% else %}
