--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 
         <div class="nine columns" style="z-index:100;">
           <div class="wrapper">
+              <h1 class="site_title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
             {{ content }}
           </div>
         </div>
