--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,6 +39,11 @@ body {
   }
 }
 
+.site_title {
+  font-size: 6.2rem;
+  font-weight: 600;
+}
+
 
 /* Effects
 —————————————————————————————————————————————————— */
