--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="ROBOTS" content="ALL" />
   <meta name="author" content="{{ site.author.name }}" />
-  <meta name="keywords" content="c#, .net, api, test, software, develop, app, code, program, visual studio">
+  {% capture site_tags %}{% for tag in site.tags %}{{ tag | first | append:", " }}{% endfor %}{% endcapture %}
+  <meta name="keywords" content="{{ site_tags }}">
   <meta property="fb:admins" content="{{ site.author.fbadmin }}" />
   <!-- evil icon -->
 
