--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -1,20 +1,20 @@
 {% if site.author.github %}
-<a href="https://github.com/{{ site.author.github }}"><img class="icon icon--github"
-    src="/assets/icon-github.svg" /></a>
+<a href="https://github.com/{{ site.author.github }}">
+    <img class="icon icon--github" src="/assets/icon-github.svg" alt="github" /></a>
 {% endif %}
 {% if site.author.twitter %}
-<a href="https://twitter.com/{{ site.author.twitter }}"><img class="icon icon--twitter"
-    src="/assets/icon-twitter.svg" /></a>
+<a href="https://twitter.com/{{ site.author.twitter }}">
+    <img class="icon icon--twitter" src="/assets/icon-twitter.svg" alt="twitter" /></a>
 {% endif %}
 {% if site.author.instagram %}
-<a href="https://instagram.com/{{ site.author.instagram }}"><img class="icon icon--instagram"
-    src="/assets/icon-instagram.svg" /></a>
+<a href="https://instagram.com/{{ site.author.instagram }}">
+    <img class="icon icon--instagram" src="/assets/icon-instagram.svg" alt="instagram" /></a>
 {% endif %}
 {% if site.author.linkedin %}
-<a href="https://linkedin.com/{{ site.author.linkedin }}"><img class="icon icon--linkedin"
-    src="/assets/icon-linkedin.svg" /></a>
+<a href="https://linkedin.com/{{ site.author.linkedin }}">
+    <img class="icon icon--linkedin" src="/assets/icon-linkedin.svg" alt="linkedin" /></a>
 {% endif %}
 {% if site.author.youtube %}
-<a href="https://youtube.com/{{ site.author.youtube }}"><img class="icon icon--youtube"
-    src="/assets/icon-youtube.svg" /></a>
+<a href="https://youtube.com/{{ site.author.youtube }}">
+    <img class="icon icon--youtube" src="/assets/icon-youtube.svg" alt="youtube" /></a>
 {% endif %}
