--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <a href="{{ site.baseurl }}/">
-    <img class="avatar-img" src="/assets/icon-avatar.svg" />
+    <img class="avatar-img" src="/assets/icon-avatar.svg" alt="olcay.dev" />
   </a>
 
   <div class="nav">
