--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="artilce_header">
     {% if page.image and page.image != "" %}
-      <img src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}"/>
+      <img src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}" alt="{{ page.title }}"/>
     {% endif %} 
     <h1 class="artilce_title" itemprop="name headline">{{ page.title }}</h1>
     {% if page.subtitle %}<h3>{{ page.subtitle }}</h3>{% endif %}
