Add workflow badge

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
         {{ site.time | date: '%Y' }}
       {% endif %}
 		  <br/>
-      Generated with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/wild-flame/jekyll-simple">simple</a> theme and hosted on <a href="https://github.com/otomatikmuhendis/aclockworkengineer">GitHub</a>.
+      Generated with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/wild-flame/jekyll-simple">simple</a> theme, validated and deployed by <a href="https://github.com/otomatikmuhendis/aclockworkengineer"><img src="https://github.com/otomatikmuhendis/aclockworkengineer/workflows/Jekyll%20site%20CI/badge.svg" alt="Github"/></a>.
       </section>
     </div>
 
