--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,13 @@ layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="artilce_header">
+  <header class="article_header">
     {% if page.image and page.image != "" %}
       <img src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}" alt="{{ page.title }}"/>
     {% endif %} 
-    <h1 class="artilce_title" itemprop="name headline">{{ page.title }}</h1>
+    <h1 class="article_title" itemprop="name headline">{{ page.title }}</h1>
     {% if page.subtitle %}<h3>{{ page.subtitle }}</h3>{% endif %}
-    <p class="artilce_meta">
+    <p class="article_meta">
       Published {% if page.author %}by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %} on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {{ page.date | date_to_long_string  }}
       </time></p>  
