Author bio updated

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,7 +3,7 @@
   <div class="authorinfo box">
     <p>Author: Olcay Bayram</p>
     <p class="bio">
-      A software enthusiast; currently a .NET Developer of an e-commerce Scrum team. Apart from the BSc, he holds a masters in information technologies.
+      A software enthusiast; currently a Senior Software Engineer of a global retail company, based in Amsterdam. Apart from the BSc, he holds a masters in IT.
     </p>
   </div>
 </section>
